--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "tars-cli",
   "version": "1.9.6",
   "engines": {
-    "npm": "^3.x.x",
-    "node": "^6.x.x"
+    "npm": ">=3.0.0",
+    "node": ">=6.0.0"
   },
   "os": [
     "darwin",
@@ -81,7 +81,7 @@
     "gulp-svg-symbols": "https://github.com/artem-malko/gulp-svg-symbols/archive/master.tar.gz",
     "gulp-svg2png": "1.0.2",
     "gulp-uglify": "^3.0.0",
-    "gulp-util": "3.0.8",
+    "gulp-util": "^3.0.8",
     "gulp-zip": "^3.2.0",
     "gulp.spritesmith": "^6.9.0",
     "handlebars": "^4.0.11",
