--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tars-cli",
-  "version": "1.9.6",
+  "version": "2.0.0-pre.1",
   "engines": {
     "npm": ">=3.0.0",
     "node": ">=6.0.0"
@@ -40,11 +40,11 @@
     "browser-sync": "^2.23.6",
     "chalk": "^1.1.3",
     "chokidar": "^2.0.3",
-    "cli-spinner": "^0.2.5",
+    "cli-spinner": "^0.2.8",
     "commander": "^2.15.1",
     "comment-json": "^1.1.3",
     "del": "2.2.2",
-    "download": "4.4.3",
+    "download": "^7.0.0",
     "eslint-loader": "^2.0.0",
     "extfs": "0.0.7",
     "fs-extra": "^0.30.0",
@@ -62,8 +62,6 @@
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "4.1.0",
     "gulp-importify": "^0.0.7",
-    "gulp-jade": "1.1.0",
-    "gulp-jade-inheritance": "^0.5.5",
     "gulp-less": "^4.0.0",
     "gulp-minify-html": "^1.0.6",
     "gulp-notify": "^3.2.0",
@@ -99,11 +97,16 @@
     "win-spawn": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.47",
+    "@babel/code-frame": "^7.0.0-beta.47",
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "eslint": "^4.19.1"
   },
   "optionalDependencies": {
-    "posix": "^4.1.1",
-    "fsevents": "^1.1.3"
+    "fsevents": "^1.1.3",
+    "posix": "^4.1.1"
   },
   "bin": {
     "tars": "./bin/tars.js"
@@ -111,6 +114,9 @@
   "preferGlobal": true,
   "scripts": {
     "test": "echo \"Error: no test specified!\" && exit 1",
+    "start": "node ./bin/tars.js",
+    "build": "babel src -d ./",
+    "build:watch": "babel -w src -d ./",
     "postuninstall": "node ./lib/npm-scripts/postuninstall.js",
     "postversion": "node ./lib/npm-scripts/postversion.js",
     "lint": "eslint bin/*.js lib/**/*.js"
