--- a/templates/package.json
+++ b/templates/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesome_project",
+  "name": "awesome-project",
   "version": "1.0.0",
   "description": "Your awesome project description",
   "main": "gulpfile.js",
