--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-debug": "^3.0.0",
     "gulp-stylus": "^2.7.0",
-    "gulp-svg-spritesheet": "https://github.com/artem-malko/gulp-svg-spritesheet/archive/master.tar.gz",
+    "gulp-svg-spritesheet": "^0.0.4",
     "gulp-svg-symbols": "https://github.com/artem-malko/gulp-svg-symbols/archive/master.tar.gz",
     "gulp-svg2png": "1.0.2",
     "gulp-uglify": "^3.0.0",
@@ -100,7 +100,9 @@
     "@babel/cli": "^7.0.0-beta.47",
     "@babel/code-frame": "^7.0.0-beta.47",
     "@babel/core": "^7.0.0-beta.47",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.56",
     "@babel/preset-env": "^7.0.0-beta.47",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "eslint": "^4.19.1"
   },
